tests/paczka1/small_fuzzy/54310216.err
Error in line 3: 5yHjcsFS S112 82,2
Error in line 5: 5yHjcsFS S874 8,9
Error in line 6: 5yHjcsFS S112 15,1
Error in line 9: DWEVfAy S112 96,8
